--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -2,45 +2,9 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta http-equiv="Content-Language" content="en"/>
-    <meta name="msapplication-TileColor" content="#2d89ef">
-    <meta name="theme-color" content="#4188c9">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="HandheldFriendly" content="True">
-    <meta name="MobileOptimized" content="320">
-    <link rel="icon" href="{% static 'dashboard/favicon.ico' %}" type="image/x-icon"/>
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'dashboard/favicon.ico' %}"/>
-    <title>{% block title %}Jeeves - Home{% endblock title %}</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,500,500i,600,600i,700,700i&amp;subset=latin-ext">
-    <script src="{% static 'dashboard/js/require.min.js' %}"></script>
-    <script>
-        requirejs.config({
-            baseUrl: "{% static 'dashboard' %}"
-        });
-    </script>
-    <!-- Dashboard Core -->
-    <link href="{% static 'dashboard/css/dashboard.css' %}" rel="stylesheet"/>
-    <script src="{% static 'dashboard/js/dashboard.js' %}"></script>
-    <!-- c3.js Charts Plugin -->
-    <link href="{% static 'dashboard/plugins/charts-c3/plugin.css' %}" rel="stylesheet"/>
-    <script src="{% static 'dashboard/plugins/charts-c3/plugin.js' %}"></script>
-    <!-- Google Maps Plugin -->
-    <link href="{% static 'dashboard/plugins/maps-google/plugin.css' %}" rel="stylesheet"/>
-    <script src="{% static 'dashboard/plugins/maps-google/plugin.js' %}"></script>
-    <!-- Input Mask Plugin -->
-    <script src="{% static 'dashboard/plugins/input-mask/plugin.js' %}"></script>
-    <!-- Datatables Plugin -->
-    <script src="{% static 'dashboard/plugins/datatables/plugin.js' %}"></script>
+    {% include 'dashboard/head.html' %}
 </head>
-<body class="">
+<body>
 <div class="page">
     <div class="flex-fill">
         <div class="header py-4">
@@ -152,38 +116,19 @@
         </div>
         {% block body %}{% endblock body %}
     </div>
-{#    <div class="footer">#}
-{#        <div class="container">#}
-{#            <div class="row">#}
-{#                <div class="col-lg-8">#}
-{##}
-{#                </div>#}
-{#                <div class="col-lg-4 mt-4 mt-lg-0">#}
-{#                    Free CI system#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-    <footer class="footer">
-        <div class="container">
-            <div class="row align-items-center flex-row-reverse">
-                <div class="col-auto ml-lg-auto">
-                    <div class="row align-items-center">
-                        <div class="col-auto">
-                            <ul class="list-inline list-inline-dots mb-0">
-                                <li class="list-inline-item"><a href="./docs/index.html">Documentation</a></li>
-                                <li class="list-inline-item"><a href="./faq.html">FAQ</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-auto mt-3 mt-lg-0 text-center">
-                    Copyright © 2019 <a href=".">Tabler</a>. Theme by <a href="https://codecalm.net" target="_blank">codecalm.net</a>
-                    All rights reserved.
-                </div>
-            </div>
-        </div>
-    </footer>
+    {#    <div class="footer">#}
+    {#        <div class="container">#}
+    {#            <div class="row">#}
+    {#                <div class="col-lg-8">#}
+    {##}
+    {#                </div>#}
+    {#                <div class="col-lg-4 mt-4 mt-lg-0">#}
+    {#                    Free CI system#}
+    {#                </div>#}
+    {#            </div>#}
+    {#        </div>#}
+    {#    </div>#}
+    {% include 'dashboard/footer.html' %}
 </div>
 </body>
 </html>
