--- a/dashboard/templates/dashboard/form.html
+++ b/dashboard/templates/dashboard/form.html
@@ -1,5 +1,5 @@
 {% load static %}
-<form method="POST" action=".">
+<form method="POST" action=".">{% csrf_token %}
     {% for field in form %}
         <div class="form-group">
             {% if field.errors %}
