Adding pipeline overview page (wip)

--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -4,7 +4,7 @@
 {% block body_content %}
     {% if pipelines %}
         {% for pipeline in pipelines %}
-            {% include 'dashboard/pipeline-card.html' with pipeline=pipeline %}
+            {% include 'dashboard/pipeline_card.html' with pipeline=pipeline %}
         {% endfor %}
     {% else %}
     <p>Add a pipeline!</p>
