--- a/dashboard/templates/dashboard/pipeline_form.html
+++ b/dashboard/templates/dashboard/pipeline_form.html
@@ -17,7 +17,7 @@
         require(["thirdparty/codemirror/lib/codemirror", "thirdparty/codemirror/mode/yaml/yaml"], function (CodeMirror) {
             CodeMirror.fromTextArea(document.getElementById("{{ form.script.id_for_label }}"), {
                 lineNumbers: true,
-                mode: "yaml"
+                mode: "yaml",
             });
         });
     </script>
