--- a/dashboard/templates/dashboard/pipeline_form.html
+++ b/dashboard/templates/dashboard/pipeline_form.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/info_page_base.html' %}
 {% load static %}
-{% block page_title %}Add new pipeline{% endblock page_title %}
+{% block page_title %}{{ title }}{% endblock page_title %}
 {% block side_links %}
     <div class="list-group list-group-transparent mb-0">
         <a href="#" class="list-group-item list-group-item-action active"><span class="icon mr-3"><i
