Pipeline runner modifications, might be broken.

--- a/dashboard/templates/dashboard/pipeline_view.html
+++ b/dashboard/templates/dashboard/pipeline_view.html
@@ -1,5 +1,6 @@
 {% extends 'dashboard/info_page_base.html' %}
 {% load static %}
+{% block title %}Jeeves - {{ pipeline.name }}{% endblock %}
 {% block page_title %}{{ pipeline.name }}{% endblock %}
 {% block body_content %}
     <h5>Description</h5>
