--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -82,6 +82,9 @@
                     <div class="text-center text-muted">
                         Don't have account yet? <a href="./register.html">Sign up</a>
                     </div>
+                    <div class="text-center text-muted">
+                        Log in with GitHub <a href="{% url 'social:begin' 'github' %}">Github Login</a>
+                    </div>
                 </div>
             </div>
         </div>
