Adding timeago to build cards

--- a/dashboard/templates/dashboard/pipeline_build_card.html
+++ b/dashboard/templates/dashboard/pipeline_build_card.html
@@ -8,7 +8,7 @@
         </div>
     </div>
     <div class="card-body">
-        {{ body }}
+        Build started {{ timeago }}.
     </div>
     <div class="card-footer">
         <a href="#">View</a>
