More work on the build overview

--- a/dashboard/templates/dashboard/pipeline_builds.html
+++ b/dashboard/templates/dashboard/pipeline_builds.html
@@ -18,73 +18,81 @@
                                     <th class="text-center w-1"><i class="icon-people"></i></th>
                                     <th>User</th>
                                     <th>Progress (estimated)</th>
-                                    <th class="text-center">Payment</th>
-                                    <th>Last Activity</th>
+                                    <th class="text-center">Status</th>
+                                    <th>Runtime</th>
                                     <th class="text-center">Satisfaction</th>
                                     <th class="text-center"><i class="icon-settings"></i></th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
-                                    <td class="text-center">
-                                        <div class="avatar d-block" style="">
-                                            <span class="avatar-status bg-green"></span>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div>Elizabeth Martin</div>
-                                        <div class="small text-muted">
-                                            Registered: Mar 7, 2019
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="clearfix">
-                                            <div class="float-left">
-                                                <strong>42%</strong>
+                                {% for build in pipeline_builds %}
+                                    {% if build.status == "SUCCESS" %}
+                                        <tr class="alert alert-success">
+                                    {% elif build.status == "IN_PROGRESS" %}
+                                        <tr class="alert alert-warning">
+                                    {% else %}
+                                        <tr class="alert alert-danger">
+                                    {% endif %}
+                                        <td class="text-center">
+                                            <div class="avatar d-block" style="">
+                                                <span class="avatar-status bg-green"></span>
                                             </div>
-                                            <div class="float-right">
-                                                <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
+                                        </td>
+                                        <td>
+                                            <div>Elizabeth Martin</div>
+                                            <div class="small text-muted">
+                                                Registered: Mar 7, 2019
                                             </div>
-                                        </div>
-                                        <div class="progress progress-xs">
-                                            <div class="progress-bar bg-yellow" role="progressbar" style="width: 42%"
-                                                 aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                    </td>
-                                    <td class="text-center">
-                                        <i class="payment payment-visa"></i>
-                                    </td>
-                                    <td>
-                                        <div class="small text-muted">Last login</div>
-                                        <div>4 minutes ago</div>
-                                    </td>
-                                    <td class="text-center">
-                                        <div class="mx-auto chart-circle chart-circle-xs" data-value="0.42"
-                                             data-thickness="3" data-color="blue">
-                                            <canvas width="40" height="40"></canvas>
-                                            <div class="chart-circle-value">42%</div>
-                                        </div>
-                                    </td>
-                                    <td class="text-center">
-                                        <div class="item-action dropdown">
-                                            <a href="javascript:void(0)" data-toggle="dropdown" class="icon"
-                                               aria-expanded="false"><i class="fe fe-more-vertical"></i></a>
-                                            <div class="dropdown-menu dropdown-menu-right" x-placement="bottom-end"
-                                                 style="position: absolute; transform: translate3d(15px, 20px, 0px); top: 0px; left: 0px; will-change: transform;">
-                                                <a href="javascript:void(0)" class="dropdown-item"><i
-                                                        class="dropdown-icon fe fe-tag"></i> Action </a>
-                                                <a href="javascript:void(0)" class="dropdown-item"><i
-                                                        class="dropdown-icon fe fe-edit-2"></i> Another action </a>
-                                                <a href="javascript:void(0)" class="dropdown-item"><i
-                                                        class="dropdown-icon fe fe-message-square"></i> Something else
-                                                    here</a>
-                                                <div class="dropdown-divider"></div>
-                                                <a href="javascript:void(0)" class="dropdown-item"><i
-                                                        class="dropdown-icon fe fe-link"></i> Separated link</a>
+                                        </td>
+                                        <td>
+                                            <div class="clearfix">
+                                                <div class="float-left">
+                                                    <strong>42%</strong>
+                                                </div>
+                                                <div class="float-right">
+                                                    <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
+                                                </div>
                                             </div>
-                                        </div>
-                                    </td>
-                                </tr>
+                                            <div class="progress progress-xs">
+                                                <div class="progress-bar bg-yellow" role="progressbar" style="width: 40%"
+                                                     aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                            </div>
+                                        </td>
+                                        <td class="text-center">
+                                            {{ build.status }}
+                                        </td>
+                                        <td>
+                                            <div><i class="fe fe-clock mr-2"></i> {{ build.elapsed_time }}</div>
+                                            <div><i class="fe fe-calendar mr-2"></i> {{ build.created_at_hr }}</div>
+                                        </td>
+                                        <td class="text-center">
+                                            <div class="mx-auto chart-circle chart-circle-xs" data-value="0.42"
+                                                 data-thickness="3" data-color="blue">
+                                                <canvas width="40" height="40"></canvas>
+                                                <div class="chart-circle-value">42%</div>
+                                            </div>
+                                        </td>
+                                        <td class="text-center">
+                                            <div class="item-action dropdown">
+                                                <a href="javascript:void(0)" data-toggle="dropdown" class="icon"
+                                                   aria-expanded="false"><i class="fe fe-more-vertical"></i></a>
+                                                <div class="dropdown-menu dropdown-menu-right" x-placement="bottom-end"
+                                                     style="position: absolute; transform: translate3d(15px, 20px, 0px); top: 0px; left: 0px; will-change: transform;">
+                                                    <a href="javascript:void(0)" class="dropdown-item"><i
+                                                            class="dropdown-icon fe fe-tag"></i> Action </a>
+                                                    <a href="javascript:void(0)" class="dropdown-item"><i
+                                                            class="dropdown-icon fe fe-edit-2"></i> Another action </a>
+                                                    <a href="javascript:void(0)" class="dropdown-item"><i
+                                                            class="dropdown-icon fe fe-message-square"></i> Something else
+                                                        here</a>
+                                                    <div class="dropdown-divider"></div>
+                                                    <a href="javascript:void(0)" class="dropdown-item"><i
+                                                            class="dropdown-icon fe fe-link"></i> Separated link</a>
+                                                </div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
                                 </tbody>
                             </table>
                         </div>
