Registration form added

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -80,7 +80,7 @@
                         </div>
                     </form>
                     <div class="text-center text-muted">
-                        Don't have account yet? <a href="./register.html">Sign up</a>
+                        Don't have account yet? <a href="{% url 'dashboard:registration' %}">Sign up</a>
                     </div>
                     <div class="text-center text-muted">
                         Log in with GitHub <a href="{% url 'social:begin' 'github' %}">Github Login</a>
