More work on build details view

--- a/dashboard/static/dashboard/livelog/css/style.css
+++ b/dashboard/static/dashboard/livelog/css/style.css
@@ -10,6 +10,8 @@ body {
     color: #dbdceb;
     font-weight: 500;
     font-family: 'Share Tech Mono', monospace;
+    line-height: 50px;
+    text-align: center;
 }
 
 .log-body {
