--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -53,14 +53,14 @@
                             <div class="dropdown">
                                 <a href="#" class="nav-link pr-0 leading-none" data-toggle="dropdown">
                                     <span class="avatar"
-                                          style="background-image: url({% static 'dashboard/demo/faces/female/25.jpg' %})"></span>
+                                          style="background-image: url({% static 'dashboard/images/user.png' %})"></span>
                                     <span class="ml-2 d-none d-lg-block">
                       <span class="text-default">{{ user.get_username }}</span>
                       <small class="text-muted d-block mt-1">Administrator</small>
                     </span>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                    <a class="dropdown-item" href="#">
+                                    <a class="dropdown-item" href="{% url 'dashboard:profile' %}">
                                         <i class="dropdown-icon fe fe-user"></i> Profile
                                     </a>
                                     <a class="dropdown-item" href="#">
