Adding more functional tests

--- a/dashboard/templates/dashboard/pipeline/pipeline_builds.html
+++ b/dashboard/templates/dashboard/pipeline/pipeline_builds.html
@@ -34,7 +34,7 @@
                                 {% endif %}
                             <td>
                                 <a href="{% url 'dashboard:pipeline_build_details' pipeline.pk build.pk %}">
-                                    <div>{{ build.version }}.{{ build.subversion }}</div>
+                                    {{ build.version }}.{{ build.subversion }}
                                 </a>
                             </td>
                             <td>
