--- a/dashboard/templates/dashboard/pipeline/pipeline_form.html
+++ b/dashboard/templates/dashboard/pipeline/pipeline_form.html
@@ -2,10 +2,10 @@
 {% load static %}
 {% block page_title %}{{ title }}{% endblock page_title %}
 {% block side_links %}
-    <div class="list-group list-group-transparent mb-0">
-        <a href="#" class="list-group-item list-group-item-action active"><span class="icon mr-3"><i
-                class="fe fe-flag"></i></span>Documentation</a>
-    </div>
+{#    <div class="list-group list-group-transparent mb-0">#}
+{#        <a href="#" class="list-group-item list-group-item-action active"><span class="icon mr-3"><i#}
+{#                class="fe fe-flag"></i></span>Documentation</a>#}
+{#    </div>#}
 {% endblock side_links %}
 {% block body_content %}
     {% include 'dashboard/form.html' %}
