--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -16,67 +16,20 @@
                     </a>
                     <div class="d-flex order-lg-2 ml-auto">
                         {% if user.is_authenticated %}
-                            <div class="dropdown d-none d-md-flex">
-                                <a class="nav-link icon" data-toggle="dropdown">
-                                    <i class="fe fe-bell"></i>
-                                    <span class="nav-unread"></span>
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                    <a href="#" class="dropdown-item d-flex">
-                                        <span class="avatar mr-3 align-self-center"
-                                              style="background-image: url({% static 'dashboard/demo/faces/male/41.jpg' %})"></span>
-                                        <div>
-                                            <strong>Nathan</strong> pushed new commit: Fix page load performance issue.
-                                            <div class="small text-muted">10 minutes ago</div>
-                                        </div>
-                                    </a>
-                                    <a href="#" class="dropdown-item d-flex">
-                                        <span class="avatar mr-3 align-self-center"
-                                              style="background-image: url({% static 'dashboard/demo/faces/male/1.jpg' %})"></span>
-                                        <div>
-                                            <strong>Alice</strong> started new task: Tabler UI design.
-                                            <div class="small text-muted">1 hour ago</div>
-                                        </div>
-                                    </a>
-                                    <a href="#" class="dropdown-item d-flex">
-                                        <span class="avatar mr-3 align-self-center"
-                                              style="background-image: url({% static 'dashboard/demo/faces/male/18.jpg' %})"></span>
-                                        <div>
-                                            <strong>Rose</strong> deployed new version of NodeJS REST Api V3
-                                            <div class="small text-muted">2 hours ago</div>
-                                        </div>
-                                    </a>
-                                    <div class="dropdown-divider"></div>
-                                    <a href="#" class="dropdown-item text-center">Mark all as read</a>
-                                </div>
-                            </div>
                             <div class="dropdown">
                                 <a href="#" class="nav-link pr-0 leading-none" data-toggle="dropdown">
                                     <span class="avatar"
                                           style="background-image: url({% static 'dashboard/images/user.png' %})"></span>
                                     <span class="ml-2 d-none d-lg-block">
                       <span class="text-default">{{ user.get_username }}</span>
-                      <small class="text-muted d-block mt-1">Administrator</small>
+                      <small class="text-muted d-block mt-1">{% if user.is_superuser %}Administrator{% else %}User{% endif %}</small>
                     </span>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
                                     <a class="dropdown-item" href="{% url 'dashboard:profile' %}">
                                         <i class="dropdown-icon fe fe-user"></i> Profile
                                     </a>
-                                    <a class="dropdown-item" href="#">
-                                        <i class="dropdown-icon fe fe-settings"></i> Settings
-                                    </a>
-                                    <a class="dropdown-item" href="#">
-                                        <span class="float-right"><span class="badge badge-primary">6</span></span>
-                                        <i class="dropdown-icon fe fe-mail"></i> Inbox
-                                    </a>
-                                    <a class="dropdown-item" href="#">
-                                        <i class="dropdown-icon fe fe-send"></i> Message
-                                    </a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#">
-                                        <i class="dropdown-icon fe fe-help-circle"></i> Need help?
-                                    </a>
                                     <a class="dropdown-item" href="{% url 'logout' %}">
                                         <i class="dropdown-icon fe fe-log-out"></i> Sign out
                                     </a>
@@ -96,22 +49,22 @@
                 </div>
             </div>
         </div>
-        <div class="header collapse d-lg-flex p-0" id="headerMenuCollapse">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg order-lg-first">
-                        <ul class="nav nav-tabs border-0 flex-column flex-lg-row">
-                            <li class="nav-item">
-                                <a href="{% url 'dashboard:index' %}"
-                                   class="nav-link{% if request.resolver_match.url_name == "index" %} active{% endif %}"><i
-                                        class="fe fe-home"></i> Home</a>
-                            </li>
-
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+{#        <div class="header collapse d-lg-flex p-0" id="headerMenuCollapse">#}
+{#            <div class="container">#}
+{#                <div class="row align-items-center">#}
+{#                    <div class="col-lg order-lg-first">#}
+{#                        <ul class="nav nav-tabs border-0 flex-column flex-lg-row">#}
+{#                            <li class="nav-item">#}
+{#                                <a href="{% url 'dashboard:index' %}"#}
+{#                                   class="nav-link{% if request.resolver_match.url_name == "index" %} active{% endif %}"><i#}
+{#                                        class="fe fe-home"></i> Home</a>#}
+{#                            </li>#}
+{##}
+{#                        </ul>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
         {% block body %}{% endblock body %}
     </div>
     {% include 'dashboard/footer.html' %}
