--- a/dashboard/templates/dashboard/pipeline/pipeline_builds.html
+++ b/dashboard/templates/dashboard/pipeline/pipeline_builds.html
@@ -25,19 +25,19 @@
                             </thead>
                             <tbody>
                             {% for build in pipeline_builds %}
-                                {% if build.status == "SUCCESS" %}
-                                    <tr class="alert alert-success">
-                                        {% elif build.status == "FAILED" %}
-                                    <tr class="alert alert-danger">
+                                {% if build.status == "Success" %}
+                                    <tr class="alert alert-success" id="row-{{ build.pk }}">
+                                        {% elif build.status == "Failed" %}
+                                    <tr class="alert alert-danger" id="row-{{ build.pk }}">
                                         {% else %}
-                                    <tr class="alert alert-warning">
+                                    <tr class="alert alert-warning" id="row-{{ build.pk }}">
                                 {% endif %}
-                            <td>
+                            <td id="version-{{ build.pk }}">
                                 <a href="{% url 'dashboard:pipeline_build_details' pipeline.pk build.pk %}">
                                     {{ build.version }}.{{ build.subversion }}
                                 </a>
                             </td>
-                            <td>
+                            <td id="triggered_by-{{ build.pk }}">
                                 <div>{{ build.triggered_by }}</div>
                                 <div class="small text-muted">
                                     Started: {{ build.created_at }}
@@ -46,21 +46,21 @@
                             <td>
                                 <div class="clearfix">
                                     <div class="float-left">
-                                        <strong>{{ build.progress }}%</strong>
+                                        <strong id="progress-{{ build.pk }}">{{ build.progress }}%</strong>
                                     </div>
                                 </div>
                                 <div class="progress progress-xs">
                                     <div class="progress-bar bg-green" role="progressbar"
                                          style="width: {{ build.progress }}%"
-                                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" id="progress_bar-{{ build.pk }}"></div>
                                 </div>
                             </td>
-                            <td class="text-center">
+                            <td class="text-center" id="status-{{ build.pk }}">
                                 {{ build.status }}
                             </td>
-                            <td>
-                                <div><i class="fe fe-clock mr-2"></i> {{ build.elapsed_time }}</div>
-                                <div><i class="fe fe-calendar mr-2"></i> {{ build.created_at_hr }}</div>
+                            <td id="time-{{ build.pk }}">
+                                <div id="elapsed_time-{{ build.pk }}"><i class="fe fe-clock mr-2"></i> {{ build.elapsed_time }}</div>
+                                <div id="created_at_hr-{{ build.pk }}"><i class="fe fe-calendar mr-2"></i> {{ build.created_at_hr }}</div>
                             </td>
 {#                            <td class="text-center">#}
 {#                                <div class="item-action dropdown">#}
@@ -105,6 +105,8 @@
         </div>
     </div>
 
-
-
+<script>
+let url = "{% url 'dashboard:pipeline_builds' pipeline.pk request.resolver_match.kwargs.page %}";
+</script>
+<script src="{% static 'dashboard/js/live_table.js' %}"></script>
 {% endblock body %}
