--- a/dashboard/templates/dashboard/registration.html
+++ b/dashboard/templates/dashboard/registration.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col col-login mx-auto">
                     <div class="text-center mb-6">
-                        <img src="{% static 'dashboard/logo.svg' %}" class="h-6" alt="">
+                        <img src="{% static 'dashboard/logo.png' %}" class="h-6" alt="">
                     </div>
 
                     {% for error in form.non_field_errors %}
