Adding restart endpoint

--- a/dashboard/templates/dashboard/pipeline/pipeline_build_card.html
+++ b/dashboard/templates/dashboard/pipeline/pipeline_build_card.html
@@ -11,6 +11,6 @@
         Build started {{ timeago }}.
     </div>
     <div class="card-footer">
-        <a href="#">View</a>
+        <a href="{% url 'dashboard:pipeline_build_details' pipeline_pk pk %}">View</a>
     </div>
 </div>
