--- a/dashboard/templates/dashboard/registration.html
+++ b/dashboard/templates/dashboard/registration.html
@@ -30,7 +30,7 @@
                                 <input type="text"
                                        class="form-control{% if form.username.errors %} is-invalid{% endif %}"
                                        placeholder="Enter name" name="username"
-                                       id="username" value="{{ form.username.value }}">
+                                       id="username" value="{% if form.username.value %}{{ form.username.value }}{% endif %}">
                                 {% if form.username.errors %}
                                     {% for error in form.username.errors %}
                                         <div class="invalid-feedback">{{ error }}</div>
